# pinball.old

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  clean  config.status  configure  configure.ac  libtool  manpage.refs  pinball-config  pinball.6  pinball.spec  pinconfig.h  pinconfig.h.in  stamp-h1
addon/: Makefile  Makefile.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
base/: Behavior.cpp  BehaviorVisitor.cpp  Config.cpp  Makefile  Makefile.in  SignalSender.cpp
data/: Makefile  Makefile.am  Makefile.in
data/hurd/: Makefile  Makefile.am  Makefile.in  libModuleHurd.la
data/hurd/.libs/: libModuleHurd.la  libModuleHurd.lai  libModuleHurd.so.0
data/professor/: Makefile  Makefile.in  libModuleProfessor.la
data/professor/.libs/: libModuleProfessor.la  libModuleProfessor.lai  libModuleProfessor.so.0
data/professor2/: Makefile.am
data/tux/: Makefile  Makefile.in  libModuleTux.la
data/tux/.libs/: libModuleTux.la  libModuleTux.lai  libModuleTux.so.0
libltdl/: Makefile  config.h  config.status  libtool
src/: EyeBehavior.cpp  EyeBehavior.h  Loader.cpp  Makefile  Makefile.am  Makefile.in  Pinball.cpp  pinball
test/: Makefile  Makefile.am  Makefile.in  libModuleTest.la
test/.libs/: libModuleTest.la  libModuleTest.lai  libModuleTest.so.0
